# JxPoolMiner

./: .gitignore  BUGFIX_REPORT.md  BUILD.md  CHANGELOG.md  Cargo.toml  FINAL_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  LOCAL_STRATUM_SETUP.md  Makefile  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  STATUS.md  TEST_REPORT.md  TEST_RESULTS.md  build-installers.sh  build.rs  build_all.sh  install.sh  package.sh  test_all.sh  test_structure.py
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/types/: algorithm.rs  device.rs  job.rs  mod.rs  share.rs
crates/devices/: Cargo.toml
crates/devices/src/: asic.rs  cpu.rs  detector.rs  gpu.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs
crates/gui/src/views/: mod.rs
crates/mining/: Cargo.toml
crates/mining/src/: engine.rs  lib.rs
crates/mining/src/algorithms/: ethash.rs  gxhash.rs  mod.rs  sha256.rs
crates/pool/: Cargo.toml
crates/pool/src/: client.rs  lib.rs
crates/pool/src/stratum/: mod.rs
crates/stats/: Cargo.toml
crates/stats/src/: collector.rs  lib.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
src/: main.rs
tests/: integration_test.rs
