[package]
name = "jxpoolminer-gui"
version = "1.0.0"
edition = "2021"

[dependencies]
jxpoolminer-core = { path = "../core" }
jxpoolminer-devices = { path = "../devices" }
jxpoolminer-mining = { path = "../mining" }
jxpoolminer-pool = { path = "../pool" }
jxpoolminer-stats = { path = "../stats" }
jxpoolminer-config = { path = "../config" }
eframe = "0.25"
egui = "0.25"
egui_plot = "0.25"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
chrono = "0.4"
