[package]
name = "jxpoolminer-pool"
version = "1.0.0"
edition = "2021"

[dependencies]
jxpoolminer-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
hex = "0.4"
